added trajectory featurization

--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -287,6 +287,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08be1d10",
+   "metadata": {},
+   "source": [
+    "## Trajectory featurization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4582e1d3",
+   "metadata": {},
+   "source": [
+    "Once seeded MD simulations are finished, they can be used to build a Markov State Model. However, that requires dimensionality reduction, which starts by reducing trajectory data from all atom coordinates to select features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c25347e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(allostery.analysis.featurize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59363560",
+   "metadata": {},
+   "source": [
+    "`featurize()` computes a distance, dihedral or RMSD values for the trajectory specified, using an AMBER selection mask ([documentation](https://amberhub.chpc.utah.edu/atom-mask-selection-syntax/)). If RMSD is being calculated, `reference` has to be provided as well, and `shared` is the selection mask for atoms used for alignment. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a5c48d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featurized_trajectory = featurize('examples_data/trajectory.nc', 'distance', ':10@CA :20@CA', topology='example_data/system.prm7')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68dfb6c8",
+   "metadata": {},
+   "source": [
+    "will calculate the distance between C$\\alpha$ atoms for residues 10 and 20. Since the trajectory path was given, topology is also provided. Note that featurization is done by loading the trajectory as `pytraj.Trajectory` which can be slow for larger systems and longer trajectories. If possible, using dry trajectories is recommended."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2e3df3e",
    "metadata": {},
    "source": [
@@ -299,7 +351,6 @@
    "metadata": {},
    "source": [
     "This tool is currently a work in progress. Functionality still to come is:\n",
-    "* Trajectory featurisation\n",
     "* MSM building"
    ]
   },
@@ -314,7 +365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('bss')",
    "language": "python",
    "name": "python3"
   },
@@ -329,6 +380,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2e311702793db1e2cbdbca1b4af01943df9920d13b5c28949f5d0bcf0a016590"
+   }
   }
  },
  "nbformat": 4,
