updated system setup with solvation

--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -49,7 +49,7 @@
    "id": "352b9da7",
    "metadata": {},
    "source": [
-    "If a `topology=` parameter is provided, the system will not be re-parameterised. Additionally, if `solvated=True`, no additional preparation will be done, and the function will go straight to minimisation."
+    "If a `topology=` parameter is provided, the system will not be re-parameterised. Additionally, if `solvation=None`, no additional preparation will be done, and the function will go straight to minimisation. Otherwise, `solvation` can specify the size of box or shell to solvate the system in."
    ]
   },
   {
