--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -12,10 +12,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b19d3952",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import allostery"
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ammo import *"
    ]
   },
   {
@@ -31,7 +35,7 @@
    "id": "64efd477",
    "metadata": {},
    "source": [
-    "A common starting point in MD simulations is a PDB file. `allostery.setup.setup_system()` takes a (clean) input PDB file, and prepares it for further MD simulations. More information is in the description:"
+    "A common starting point in MD simulations is a PDB file. `ammo.setup.setup_system()` takes a (clean) input PDB file, and prepares it for further MD simulations. More information is in the description:"
    ]
   },
   {
@@ -41,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(allostery.setup.setup_systemup_system)"
+    "help(setup.setup_system)"
    ]
   },
   {
@@ -67,9 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equilibrated_system = allostery.setup.setup_system('example_data/input_protein.pdb', \n",
-    "                                                   (7500, 100, 250),\n",
-    "                                                   parameters=['source leaprc.phosaa10'])"
+    "equilibrated_system = setup.setup_system('example_data/input_protein.pdb', \n",
+    "                                         (7500, 100, 250),\n",
+    "                                         parameters=['source leaprc.phosaa10'])"
    ]
   },
   {
@@ -95,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(allostery.steering.run_smd)"
+    "help(steering.run_smd)"
    ]
   },
   {
@@ -103,7 +107,7 @@
    "id": "10f989b5",
    "metadata": {},
    "source": [
-    "The `topology` and `coordinate` parameters are self-explanatory. The `masks` are AMBER selection masks, corresponding to the atoms involved in each CV used for steering. For example, the distance between the C$\\alpha$ atoms of residues 100 and 200 would be \":100@CA :200@CA\". More information can be found [here](https://amberhub.chpc.utah.edu/atom-mask-selection-syntax/). `types` corresponds to CV types supported by BioSimSpace."
+    "The `topology` and `coordinate` parameters are self-explanatory. The `input` requires as pseudo PLUMED file, containing all the required information for steering, except the specific `ATOM` indices are replaced with [AMBER selection masks](https://amberhub.chpc.utah.edu/atom-mask-selection-syntax/), and in case of RMSD collective variables, an additional reference `FILE` parameter is added, which will be removed during PLUMED input preparation. An example pseudo PLUMED input file is given below (as well as in the specific use case examples), and more information can be found on the [PLUMED website](https://www.plumed.org/doc-v2.8/user-doc/html/_m_o_v_i_n_g_r_e_s_t_r_a_i_n_t.html). "
    ]
   },
   {
@@ -119,7 +123,38 @@
    "id": "eb3ee551",
    "metadata": {},
    "source": [
-    "Here is an example of multi-CV steering. The CVs will be the $\\chi$1 angle of Tyr152, the distance between C$\\gamma$ atoms of residues 196 and 280, and the heavy atom RMSD of residues 178-184. Note that in the masks below, the residue numbers are offset by 1. The system includes an ACE cap at the start, and the mask selection indexes starting from 1. The steering will be carried out in 100 ns. In addition to the specified values, times, and forces, additional steps will be added to apply the force over 4 ps, keeping the CV values as initial. The target values and forces used are based on knowledge of the system."
+    "Here is an example of multi-CV steering. The CVs will be the heavy atom RMSD of residues 178-184, the $\\chi$1 angle of Tyr152, the stacking of residues 185 and 179, and the distance between C$\\gamma$ atoms of residues 196 and 280. Note that in the masks below, the residue numbers are offset by 1. The system includes an ACE cap at the start, and the mask selection indices starting from 1. The steering will be carried out in 100 ns. The target values and forces used are based on knowledge of the system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28bd265a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plumed_input = ['rmsd: RMSD REFERENCE=:179-185&(!@/H) TYPE=OPTIMAL FILE=example_data/reference.pdb\\n',\n",
+    "                'tyr: TORSION ATOMS=:153@N:153@CA:153@CB:153@CG\\n',\n",
+    "                'pro1: DISTANCE ATOMS=:180@CE2:186@CD\\n',\n",
+    "                'pro2: DISTANCE ATOMS=:180@CD1:185@CA\\n',\n",
+    "                'stacking: CUSTOM ARG=pro1,pro2 FUNC=abs(x-y) PERIODIC=NO\\n',\n",
+    "                'phe: DISTANCE ATOMS=:197@CG:281@CG\\n',\n",
+    "                'MOVINGRESTRAINT ...\\n',\n",
+    "                '  ARG=rmsd,tyr,stacking,phe\\n',\n",
+    "                '  STEP0=0    AT0=initial,initial,initial,initial    KAPPA0=0.0,0.0,0.0,0.0\\n',\n",
+    "                '  STEP1=2000    AT1=initial,initial,initial,initial    KAPPA1=3500.0,3500.0,3500.0,3500.0\\n',\n",
+    "                '  STEP2=75000000    AT2=0.0,1.047,0.0,0.45    KAPPA2=3500.0,3500.0,3500.0,3500.0\\n',\n",
+    "                '  STEP3=76000000    AT3=0.0,1.047,0.0,0.45    KAPPA3=0.0,0.0,0.0,0.0\\n',\n",
+    "                '... MOVINGRESTRAINT\\n',\n",
+    "                'PRINT STRIDE=2500 ARG=* FILE=steering.dat']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f0f2df5",
+   "metadata": {},
+   "source": [
+    "The `\"initial\"` values for the CVs at steps 0 and 1 will be computed using PLUMED and filled in during final file setup. This, together with the use of AMBER atom masks, allows for easier steering preparation while still using the whole range of CVs in PLUMED."
    ]
   },
   {
@@ -129,13 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steering = allostery.steering.run_smd('system.prm7', 'system_equilibrated.rst7',\n",
-    "                                      masks=[':153&(@N,CA,CB,CG)', ':197@CG :281@CG', ':179-185&!(@/H)'],\n",
-    "                                      types=['torsion', 'distance', 'rmsd'],\n",
-    "                                      timings=[100],\n",
-    "                                      values=[-1.047, 0.7, 0],\n",
-    "                                      forces=[2500, 2500, 2500],\n",
-    "                                      reference='example_data/reference.pdb')"
+    "steering = steering.run_smd('system.prm7', 'system_equilibrated.rst7', input=plumed_input)"
    ]
   },
   {
@@ -143,72 +172,7 @@
    "id": "c3dbb0af",
    "metadata": {},
    "source": [
-    "After the steering process is finished, the output files are copied over from the working directory, and additionally a dry copy of the trajectory (no waters or ions) is saved (in case of further analysis required).\n",
-    "\n",
-    "We can also check the contents of the PLUMED file written by the `run_sMD()` function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8489ef4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f'{steering.workDir()}/plumed.dat', 'r') as file:\n",
-    "    contents = file.readlines()\n",
-    "for line in contents:\n",
-    "    print(line, end='')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97809486",
-   "metadata": {},
-   "source": [
-    "Even though we specified only one step of the steered MD, 4 steps in total are part of the plumed file. Between step 0 and 1, the force is applied. Between step 1 and 2, the actual steering happens, and afterwards the simulation is run for another 2 ns with no force."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c42b2ff",
-   "metadata": {},
-   "source": [
-    "#### Multiple step steering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b64d156c",
-   "metadata": {},
-   "source": [
-    "In order to specify multiple steering steps, `timings`, `values` and `forces` need to be provided. For example, if we wanted to steer the dihedral angle during the first 50 ns of the simulation and the distance during the second, while steering the RMSD throughout, the input would look like this:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5df1f17f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "steering = allostery.steering.run_smd('system.prm7', 'system_equilibrated.rst7',\n",
-    "                                      masks=[':153&(@N,CA,CB,CG)', ':197@CG :281@CG', ':179-185&!(@/H)'],\n",
-    "                                      types=['torsion', 'distance', 'rmsd'],\n",
-    "                                      timings=[50,100],\n",
-    "                                      values=[[-1.047, -1.047,], ['initial', 0.7], ['initial/2', 0]],\n",
-    "                                      forces=[[2500, 2500], [2500, 2500], [2500, 2500]],\n",
-    "                                      reference='example_data/reference.pdb')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ad7a037",
-   "metadata": {},
-   "source": [
-    "Note that simple mathematical operations are allowed for the initial value, and this way the RMSD steering is not affected.\n",
-    "\n",
-    "In this case the dihedral angle CV was steered to its target value and kept constant by applying force, while the distance CV was kept at its initial value by applying force during the first half of the simulation. An alternative protocol where they are not steered at all beyond changing the CV value could be employed by simply changing the appropriate force constants to 0."
+    "After the steering process is finished, the output files are copied over from the working directory, and additionally a dry copy of the trajectory (no waters or ions) is saved (in case of further analysis required)."
    ]
   },
   {
@@ -256,7 +220,7 @@
    "id": "53686ecf",
    "metadata": {},
    "source": [
-    "With snapshot saved from the sMD trajectory, they can be used as \"seeds\" to run equilibrium MD simulations. Since they are indeed just equilibrium MD simulations, the `allostery.equilibrium.run_eq_md()` function is most appropriate in this case."
+    "With snapshot saved from the sMD trajectory, they can be used as \"seeds\" to run equilibrium MD simulations. Since they are indeed just equilibrium MD simulations, the `ammo.equilibrium.run_eq_md()` function is most appropriate in this case."
    ]
   },
   {
@@ -266,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(allostery.equilibrium.run_eq_md)"
+    "help(equilibrium.run_eq_md)"
    ]
   },
   {
@@ -308,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(allostery.analysis.featurize)"
+    "help(analysis.featurize)"
    ]
   },
   {
@@ -326,7 +290,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "featurized_trajectory = featurize('examples_data/trajectory.nc', 'distance', ':10@CA :20@CA', topology='example_data/system.prm7')"
+    "featurized_trajectory = analysis.featurize('example_data/steering.nc', 'example_data/system.prm7', \n",
+    "                                           'distance', ':197@CG :281@CG')"
    ]
   },
   {
@@ -334,7 +299,21 @@
    "id": "68dfb6c8",
    "metadata": {},
    "source": [
-    "will calculate the distance between C$\\alpha$ atoms for residues 10 and 20. Since the trajectory path was given, topology is also provided. Note that featurization is done by loading the trajectory as `pytraj.Trajectory` which can be slow for larger systems and longer trajectories. If possible, using dry trajectories is recommended."
+    "will calculate the distance between C$\\gamma$ atoms for residues 196 and 280. Since the trajectory path was given, topology is also provided. The results are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3acc48aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, figsize=(10,5))\n",
+    "\n",
+    "ax.plot(featurized_trajectory, alpha=0.7)\n",
+    "ax.set_xlabel('frames')\n",
+    "ax.set_ylabel('distance/$\\AA$')"
    ]
   },
   {
@@ -342,7 +321,7 @@
    "id": "b2e3df3e",
    "metadata": {},
    "source": [
-    "## In progress"
+    "## MSM building"
    ]
   },
   {
@@ -350,8 +329,7 @@
    "id": "c10721ca",
    "metadata": {},
    "source": [
-    "This tool is currently a work in progress. Functionality still to come is:\n",
-    "* MSM building"
+    "An example of Markov State Modelling is available in a separate [notebook](msm.ipynb)"
    ]
   },
   {
@@ -365,7 +343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('bss')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
